--- a/zanata-war/src/main/resources/messages.properties
+++ b/zanata-war/src/main/resources/messages.properties
@@ -336,6 +336,7 @@ jsf.webhookType.DocumentStatsEvent.desc=Translations are updated (singly or in a
 jsf.webhookType.VersionChangedEvent.desc=Project version is created or removed
 jsf.webhookType.ProjectMaintainerChangedEvent.desc=Project maintainer is added or removed
 jsf.webhookType.SourceDocumentChangedEvent.desc=Source document is added or removed
+jsf.webhookType.ManuallyTriggeredEvent.desc=A Event that can be triggered manually
 
 #------ [home] > Projects > [project-id] ------
 jsf.ReadOnlyVersions=Read-only versions
@@ -648,6 +649,9 @@ jsf.pager.PreviousPage=Previous
 jsf.iteration.ExportTMXIter=Export Version to TMX
 jsf.iteration.ExportTMX.Language=Export {0} Documents to TMX
 jsf.iteration.files.NoFiles=No Files Available
+
+jsf.iteration.triggerWebHook=Trigger a manual webhook for {0}
+
 ! local directory path where a document is located within the project
 jsf.iteration.files.Path=Path
 jsf.iteration.files.Filter.title=Filter by document name
